Revert "fixed home page margins and prevented horizontal scrolling"
This reverts commit 6b3ffcaf659057bc5da1ff917a0011b6ce378b21.

--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,6 @@ body {
   min-height: 100vh;
   font-family: "Inter";
   animation: move 1s linear infinite forwards;
-  overflow-x: hidden;
 }
 
 html {
@@ -48,10 +47,6 @@ body::after {
   width: 200px;
   background: rgb(255, 0, 234);
   filter: blur(150px);
-}
-
-#app-container {
-  width: 100vw;
 }
 
 .background-circle1 {
@@ -90,6 +85,7 @@ body::after {
 
 .container {
   border-radius: 10px;
+  width: var(80%);
   color: var(--text-primary);
   padding: 10px 30px;
   margin: 5px auto;
